RESOLVED FIXED233693
[JSC] Fix potential build break related to StructureID.h
https://bugs.webkit.org/show_bug.cgi?id=233693
Summary [JSC] Fix potential build break related to StructureID.h
Xan Lopez
Reported 2021-12-01 03:31:43 PST
The file is now using CPURegister without declaring it. This may or may not just compile because of unified builds, but it broke at least one build: https://build.webkit.org/#/builders/133/builds/4298/steps/9/logs/stdio
Attachments
v1 (1.46 KB, patch)
2021-12-01 03:32 PST, Xan Lopez
no flags
v2 (1.46 KB, patch)
2021-12-01 03:37 PST, Xan Lopez
no flags
Xan Lopez
Comment 1 2021-12-01 03:32:51 PST
Created attachment 445547 [details] v1 Add include for CPURegister.
Xan Lopez
Comment 2 2021-12-01 03:37:21 PST
Created attachment 445548 [details] v2 Now with the right include!
EWS
Comment 3 2021-12-01 04:45:48 PST
Committed r286360 (244719@main): <https://commits.webkit.org/244719@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445548 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-01 04:46:25 PST
Keith Miller
Comment 5 2021-12-01 12:52:31 PST
Whoops, thanks!
Note You need to log in before you can comment on or make changes to this bug.