[JSC] Fix potential build break related to StructureID.h https://bugs.webkit.org/show_bug.cgi?id=233693

Patch by Xan Lopez <xan@igalia.com> on 2021-12-01
Reviewed by Adrian Perez de Castro.

* runtime/StructureID.h: include StdIntExtras.h for CPURegister.


Canonical link: https://commits.webkit.org/244719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286360 268f45cc-cd09-0410-ab3c-d52691b4dbfc